--- a/contact/contact.html
+++ b/contact/contact.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Контакты</title>
+    <title>MSB Контакты</title>
     <link rel="stylesheet" href="../general.css" media="all">
     <link rel="stylesheet" href="../header/header.css" media="all">
     <link rel="stylesheet" href="../contact/contact.css" media="all" >
@@ -52,9 +52,9 @@
                <p>dir@ids76.ru</p> 
             </div>
             <div class="headerTop__log">
-                <a href="" class="login">Войти</a>
-                <a href="" class="register">Зарегистрироваться</a>
-                <a href="" class="log"> <img src="../header/log.svg" alt="вход"><p>вход</p></a>
+                <a href="../login/login.html" class="login">Войти</a>
+                <a href="../register/register.html" class="register">Зарегистрироваться</a>
+                <a href="../login/login.html" class="log"> <img src="../header/log.svg" alt="вход"><p>вход</p></a>
             </div>
         </div>
         <div class="services">
@@ -158,9 +158,9 @@
                 </div>
                 <div class="basement__col">
                     <h3>Кстати нас уже 1249 человек!</h3>
-                    <div class="log">
-                        <a href="" class="login">Войти</a>
-                        <a href="" class="register">Зарегистрироваться</a>
+                    <div class="logFooter">
+                        <a href="../login/login.html" class="login">Войти</a>
+                        <a href="../register/register.html" class="register">Зарегистрироваться</a>
                     </div>
                     <h3>Присоединяйся!</h3>
                 </div>
