--- a/katalog/katalog.html
+++ b/katalog/katalog.html
@@ -52,9 +52,9 @@
                <p>dir@ids76.ru</p> 
             </div>
             <div class="headerTop__log">
-                <a href="" class="login">Войти</a>
-                <a href="" class="register">Зарегистрироваться</a>
-                <a href="" class="log"> <img src="../header/log.svg" alt="вход"><p>вход</p></a>
+                <a href="../login/login.html" class="login">Войти</a>
+                <a href="../register/register.html" class="register">Зарегистрироваться</a>
+                <a href="../login/login.html" class="log"> <img src="../header/log.svg" alt="вход"><p>вход</p></a>
             </div>
         </div>
         <div class="services">
@@ -198,9 +198,9 @@
                 </div>
                 <div class="basement__col">
                     <h3>Кстати нас уже 1249 человек!</h3>
-                    <div class="log">
-                        <a href="" class="login">Войти</a>
-                        <a href="" class="register">Зарегистрироваться</a>
+                    <div class="logFooter">
+                        <a href="../login/login.html" class="login">Войти</a>
+                        <a href="../register/register.html" class="register">Зарегистрироваться</a>
                     </div>
                     <h3>Присоединяйся!</h3>
                 </div>
