work to express

--- a/gallary/gallary.html
+++ b/gallary/gallary.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../header/header.css" media="all">
     <link rel="stylesheet" href="../gallary/galary.css" media="all" >
     <link rel="stylesheet" href="../footer/footer.css"media="all">
+    <link rel="stylesheet" href="../cubinsForSomeThing.css">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
     <link rel="manifest" href="../manifest.json">
@@ -199,5 +200,6 @@
     <script src="../cubinsMoreMass.js"></script>
     <script src="./gallary.js"></script>
     <script src="../main.js"></script>
+    <script src="../mainInnerHtml.js"></script>
 </body>
 </html>
