--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
             </div>
         </div>
     </footer>
-    <script async src="./main.js"></script>
+    <script  src="./main.js"></script>
     <script  src="./katalogMass.js"></script>
-    <script async src="./mainPage.js"></script>
-    <script async src="./furnitureMass.js"></script>
+    <script  src="./mainPage.js"></script>
+    <script  src="./furnitureMass.js"></script>
 </body>
 </html>
