--- a/katalog/katalog.html
+++ b/katalog/katalog.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../header/header.css">
     <link rel="stylesheet" href="../katalog/katalog.css">
     <link rel="stylesheet" href="../footer/footer.css">
+    <link rel="stylesheet" href="../cubinsForSomeThing.css">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
     <link rel="manifest" href="../manifest.json">
@@ -115,12 +116,12 @@
                         <label><input type="range" min="0" max="10000" value="10000" id="slider-2"></label>
                     </div>
                     <div class="katalog-name">
-                        <h2>Рейтинг покупателей</h2>
-                        <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки раздевалки">Бытовки раздевалки</label>
-                        <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки для проживания">Бытовки для проживания</label>
-                        <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки c душем">Бытовки c душем</label>
-                        <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки под склад">Бытовки под склад</label>
-                        <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки прорабские">Бытовки прорабские</label>
+                        <h2>Наименование</h2>
+                        <label> <input type="checkbox" class="katalog__Checkbox0" value="Бытовки раздевалки">Бытовки раздевалки</label>
+                        <label> <input type="checkbox" class="katalog__Checkbox1" value="Бытовки для проживания">Бытовки для проживания</label>
+                        <label> <input type="checkbox" class="katalog__Checkbox2" value="Бытовки c душем">Бытовки c душем</label>
+                        <label> <input type="checkbox" class="katalog__Checkbox3" value="Бытовки под склад">Бытовки под склад</label>
+                        <label> <input type="checkbox" class="katalog__Checkbox4" value="Бытовки прорабские">Бытовки прорабские</label>
                     </div>
                     <div class="katalog-size">
                         <h2>Габариты</h2>
@@ -243,5 +244,6 @@
     <script async  src="../cubinsMoreMass.js"></script>
     <script src="../katalogMass.js"></script>
     <script src="./katalog.js"></script>
+    <script src="../mainInnerHtml.js"></script>
 </body>
 </html>
