--- a/user/user.html
+++ b/user/user.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>MSB Регистрация</title>
+    <title>MSB личный кабинет</title>
     <link rel="stylesheet" href="../general.css" media="all">
     <link rel="stylesheet" href="../header/header.css" media="all">
     <link rel="stylesheet" href="../user/user.css" media="all" >
@@ -91,10 +91,7 @@
                     <p class="userContent__name"></p>
                     <p>Номер телефона: <span class="userContent__phone"></span></p>
                     <p>Email: <span class="userContent__email"></span></p>
-                    <div class="userContent__row">
-                        <button class="rename">изменить</button>
                         <button class="exit">выйти</button>
-                    </div>
                 </div>
             </div>
             <div class="orders">
