--- a/katalog/katalog.html
+++ b/katalog/katalog.html
@@ -241,7 +241,7 @@
         </div>
     </footer>
     <script async src="../main.js"></script>
-    <script async  src="../cubinsMoreMass.js"></script>
+    <script src="../cubinsMoreMass.js"></script>
     <script src="../katalogMass.js"></script>
     <script src="./katalog.js"></script>
     <script src="../mainInnerHtml.js"></script>
