MSB container ready project

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,31 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="white">
-    <!-- придумать описание страницы -->
+    <meta name="theme-color" content="white"> 
     <meta name="description" content="придумать описание страницы">
-    <title>MSB Регистрация</title>
+    <title>MSB админ</title>
     <link rel="stylesheet" href="../admin/admin.css" media="all" >
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
     <link rel="manifest" href="../manifest.json">
 </head>
 <body>
-    <div class="search__modal">
-        <div class="search__header">
-            <input type="text" placeholder="Поиск заказов" maxlength="30"  class="search">
-            <img src="../header/search.svg" alt="поиск">
-            <p class="search__close" >Отмена</p>
-        </div>
-        <div class="search__block">
-            <a class="search__blockHref" href="../cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
-            <a class="search__blockHref" href="../cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
-            <a class="search__blockHref" href="../cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
-            <a class="search__blockHref" href="../cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
-            <a class="search__blockHref" href="../cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
-            <a class="search__blockHref" href="../transportation/transportation.html">Перевозка бытовок и контейнеров</a>
-        </div>
-    </div>
     <header>
         <div class="headerTop">
             <a href="../index.html" class="headerTop__logo">MSB</a>
@@ -37,12 +21,6 @@
                 <div class="search__media"><img src="../header/search.svg" alt="поиск"></div>
                 <img src="../header/search.svg" alt="поиск">
                 <div class="search__block">
-                    <a class="search__blockHref" href="../cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
-                    <a class="search__blockHref" href="../cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
-                    <a class="search__blockHref" href="../cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
-                    <a class="search__blockHref" href="../cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
-                    <a class="search__blockHref" href="../cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
-                    <a class="search__blockHref" href="../transportation/transportation.html">Перевозка бытовок и контейнеров</a>
                 </div>
             </div>
             <div class="headerTop__log">
