--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="white">
+    <meta name="keywords" content="msb, msb-container, бытовка, магазин бытовок, контейнер, купить контейнер, купить бытовку, строительный вагончик, купить строительный вагончик, MSB, мсб контейнер, container, аренда бытовок, аренда контейнеров, аренда строительных вагончиков, вагончик"> 
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
+    <meta name="Author" content="Povasin Kirill"> 
+    <meta name="Copyright" content="Povasin Aleksey"> 
+    <meta name="Address" content="г. Ярославль, ул 2-я Тарная 2">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="MSB-Магазин бытовок">
+     <!-- придумать описание страницы для соцсетей -->
+    <meta property="og:description" content="Описание страницы про META теги">
+    <meta property="og:image" content="./MAINLOGO.png">
+    <meta property="og:url" content="./index.html">
+    <meta property="og:site_name" content="MSB-Магазин бытовок">
     <title>MSB Контакты</title>
     <link rel="stylesheet" href="../general.css" media="all">
     <link rel="stylesheet" href="../header/header.css" media="all">
