--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="white">
-    <meta name="keywords" content="msb, бытовка, магазин бытовок, контейнер, купить контейнер, купить бытовку, строительный вагончик, купить строительный вагончик, MSB, msb container, container, аренда бытовок, аренда контейнеров, аренда строительных вагончиков, вагончик"> 
+    <meta name="keywords" content="msb, msb-container, бытовка, магазин бытовок, контейнер, купить контейнер, купить бытовку, строительный вагончик, купить строительный вагончик, MSB, мсб контейнер, container, аренда бытовок, аренда контейнеров, аренда строительных вагончиков, вагончик"> 
      <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
     <meta name="Author" content="Povasin Kirill"> 
@@ -27,6 +27,7 @@
     <link rel="apple-touch-icon" href="./iconPWA/logo192x192.svg">
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./header/header.css" media="screen and (min-width:320px)">
+    <link rel="stylesheet" href="./cubinsForSomeThing.css">
 </head>
 <body>
     <div class="search__modal">
@@ -351,6 +352,8 @@
             </div>
         </div>
     </footer>
+    <script src="./cubinsMoreMass.js"></script>
+    <script  src="./mainInnerHtml.js"></script>
     <script  src="./main.js"></script>
     <script  src="./katalogMass.js"></script>
     <script  src="./mainPage.js"></script>
