--- a/katalog/katalog.html
+++ b/katalog/katalog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta name="theme-color" content="white">
+    <meta name="keywords" content="msb, msb-container, бытовка, магазин бытовок, контейнер, купить контейнер, купить бытовку, строительный вагончик, купить строительный вагончик, MSB, мсб контейнер, container, аренда бытовок, аренда контейнеров, аренда строительных вагончиков, вагончик"> 
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
     <title>MSB Каталог</title>
