--- a/contact/contact.html
+++ b/contact/contact.html
@@ -27,6 +27,23 @@
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
     <link rel="manifest" href="../manifest.json">
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" >
+            (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();
+            for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+            k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+        
+            ym(90782826, "init", {
+                clickmap:true,
+                trackLinks:true,
+                accurateTrackBounce:true,
+                webvisor:true
+            });
+        </script>
+        <noscript><div><img src="https://mc.yandex.ru/watch/90782826" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+     <!-- /Yandex.Metrika counter -->
 </head>
 <body>
     <div class="search__modal">
@@ -188,11 +205,11 @@
                 </div>
                 <div class="d-col">
                     <h4>Каталог</h4>
-                    <a href="../cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
-                    <a href="../cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
-                    <a href="../cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
-                    <a href="../cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
-                    <a href="../cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
+                    <a href="./katalog/katalog.html">Бытовки для проживания</a>
+                    <a href="./katalog/katalog.html">Бытовки раздевалки</a>
+                    <a href="./katalog/katalog.html">Бытовки прорабские</a>
+                    <a href="./katalog/katalog.html">Бытовки под склад</a>
+                    <a href="./katalog/katalog.html">Бытовки с душем</a>
                 </div>
                 <div class="d-col">
                     <h4>Информация</h4>
