--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="MSB-Магазин бытовок">
      <!-- придумать описание страницы для соцсетей -->
-    <meta property="og:description" content="Описание страницы про META теги">
+    <meta property="og:description" content="Описание страницы">
     <meta property="og:image" content="./MAINLOGO.png">
     <meta property="og:url" content="./index.html">
     <meta property="og:site_name" content="MSB-Магазин бытовок">
@@ -28,6 +28,23 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./header/header.css" media="screen and (min-width:320px)">
     <link rel="stylesheet" href="./cubinsForSomeThing.css">
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    
+        ym(90782826, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/90782826" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+ <!-- /Yandex.Metrika counter -->
 </head>
 <body>
     <div class="search__modal">
@@ -37,12 +54,6 @@
             <p class="search__close" >Отмена</p>
         </div>
         <div class="search__block">
-            <a class="search__blockHref" href="./cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
-            <a class="search__blockHref" href="./cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
-            <a class="search__blockHref" href="./cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
-            <a class="search__blockHref" href="./cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
-            <a class="search__blockHref" href="./cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
-            <a class="search__blockHref" href="./transportation/transportation.html">Перевозка бытовок и контейнеров</a>
         </div>
     </div>
     <header>
@@ -52,12 +63,6 @@
                 <input type="text" placeholder="Поиск" maxlength="30" class="search">
                 <img decoding="async" src="./header/search.svg" alt="поиск">
                 <div class="search__block">
-                    <a class="search__blockHref" href="./cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
-                    <a class="search__blockHref" href="./cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
-                    <a class="search__blockHref" href="./cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
-                    <a class="search__blockHref" href="./cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
-                    <a class="search__blockHref" href="./cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
-                    <a class="search__blockHref" href="./transportation/transportation.html">Перевозка бытовок и контейнеров</a>
                 </div>
             </div>
             <div class="headerTop__contacts">
@@ -111,7 +116,7 @@
                                 <p>Аренда бытовок от 5000руб</p>
                             </div>
                             <div class="slide__button">
-                                <a href="./cubinsForlive/cubinsForlive.html" class="more">подробнее</a>
+                                <a href="./katalog/katalog.html" class="more">подробнее</a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -125,7 +130,7 @@
                                 <p>доствка по всей россии</p>
                             </div>
                             <div class="slide__button">
-                                <a href="./cubinsForwarehouse/cubinsForwarehouse.html" class="more">подробнее</a>
+                                <a href="./katalog/katalog.html" class="more">подробнее</a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -139,7 +144,7 @@
                                 <p>лучшие бытовки</p>
                             </div>
                             <div class="slide__button">
-                                <a href="./cubinsForbath/cubinsForbath.html" class="more">подробнее</a>
+                                <a href="./katalog/katalog.html" class="more">подробнее</a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -153,7 +158,7 @@
                                 <p>Аренда бытовок от 5000руб</p>
                             </div>
                             <div class="slide__button">
-                                <a href="./cubinsForwork/cubinsForwork.html" class="more">подробнее</a>
+                                <a href="./katalog/katalog.html" class="more">подробнее</a>
                             </div>
                         </div>
                         <div class="slide__radius">
@@ -329,11 +334,11 @@
                 </div>
                 <div class="d-col">
                     <h4>Каталог</h4>
-                    <a href="./cubinsForlive/cubinsForlive.html">Бытовки для проживания</a>
-                    <a href="./cubinsfordress/cubinsfordress.html">Бытовки раздевалки</a>
-                    <a href="./cubinsForwork/cubinsForwork.html">Бытовки прорабские</a>
-                    <a href="./cubinsForwarehouse/cubinsForwarehouse.html">Бытовки под склад</a>
-                    <a href="./cubinsForbath/cubinsForbath.html">Бытовки с душем</a>
+                    <a href="./katalog/katalog.html">Бытовки для проживания</a>
+                    <a href="./katalog/katalog.html">Бытовки раздевалки</a>
+                    <a href="./katalog/katalog.html">Бытовки прорабские</a>
+                    <a href="./katalog/katalog.html">Бытовки под склад</a>
+                    <a href="./katalog/katalog.html">Бытовки с душем</a>
                 </div>
                 <div class="d-col">
                     <h4>Информация</h4>
@@ -352,11 +357,11 @@
             </div>
         </div>
     </footer>
-    <script src="./cubinsMoreMass.js"></script>
-    <script src="./mainInnerHtml.js"></script>
-    <script src="./main.js"></script>
-    <script src="./katalogMass.js"></script>
-    <script src="./mainPage.js"></script>
-    <script src="./furnitureMass.js"></script>
+    <script type="module" src="./cubinsMoreMass.js"></script>
+    <script type="module" src="./mainInnerHtml.js"></script>
+    <script type="module" src="./main.js"></script>
+    <script type="module" src="./katalogMass.js"></script>
+    <script type="module" src="./mainPage.js"></script>
+    <script type="module" src="./furnitureMass.js"></script>
 </body>
 </html>
